# aug-tool

./: LICENCE  MANIFEST.in  README.md  setup.cfg
scr/aug-tool/: Augmentation.py
src/aug-tool/: deneme.py  factory.py  metots.py  run.py
src/aug-tool/dataAugmentor/: __init__.py  annAug.py  dataAug.py  imgAug.py  imgAugmentor.py  txtAug.py  xmlAug.py
src/aug-tool/dataOpener/: __init__.py  annOp.py  dataOp.py  imgOp.py  imgOpener.py  txtOp.py  xmlOp.py
src/aug-tool/dataSaver/: __init__.py  annSav.py  imgSav.py  txtSav.py  xmlSav.py
src/aug_tool/: __init__.py  factory.py
src/aug_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/aug_tool/dataAugmentor/: annAug.py  xmlAug.py
src/aug_tool/dataOpener/: xmlOp.py
src/aug_tool/dataSaver/: dataSav.py  imgSav.py
