[metadata]
name = aug-tool
version = 0.0.1
author = Hakan Aktaş
author_email = hakanaktas4541@gmail.com
description = A small package to increase your data for your machine learning project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hakanaktas1/aug-tool
project_urls =
    Bug Tracker = https://github.com/hakanaktas1/aug-tool
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
