[metadata]
name = aug_tool
version = 0.1.2
author = Hakan Aktaş
author_email = hakanaktas4541@gmail.com
description = A package to increase your data for your machine learning project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hakanaktas1/aug-tool
project_urls =
    Bug Tracker = https://github.com/hakanaktas1/aug-tool
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    Pillow>=8.2
    bs4>=0.0.1
    beautifulsoup4>=4.12.2
    lxml>=4.9.2

python_requires = >=3.6

[options.packages.find]
where = src
